2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-mode.el (literate-haskell-mode): Fix up mode line.
	Disable fill-comment-paragraph in Bird style.

	* inf-haskell.el (subst-char-in-string, make-temp-file):
	Add fallback definitions for XEmacs-21.4.

2008-02-28  Greg Steuck  <greg@nest.cx>  (tiny change)

	* inf-haskell.el (inferior-haskell-find-haddock): Jump to the symbol
	anchor within Haddock.

2008-02-18  Daniel Burrows  <dburrows@debian.org>  (tiny change)

	* haskell-indent.el (haskell-indent-next-symbol-safe): New fun.
	(haskell-indent-separate-valdef): Use it.

2008-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-cabal-of-buf): Fix typo.
	Reported by Bas van Dijk <v.dijk.bas@gmail.com>.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-wait-for-prompt): Add timeout arg.
	(inferior-haskell-find-definition): Expand file name in the right cwd.

2008-01-30  Greg Steuck  <greg@nest.cx>  (tiny change)

	* inf-haskell.el (inferior-haskell-cabal-of-buf)
	(inferior-haskell-module-alist-file): Adjust for XEmacs.

2008-01-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-cabal.el (haskell-cabal-font-lock-keywords): Add rules
	for `if', `else', `Library', `Flag', and `Executable'.
	(haskell-cabal-mode): Setup comment variables.

2007-12-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (haskell-package-conf-file): Don't use `ignore-errors'
	because this form is not byte-compiled :-(.

2007-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Release version 2.4.

2007-12-11  Florian Lorenzen  <lorenzen@physik.fu-berlin.de>  (tiny change)

	* haskell-mode.el (haskell-mode-map): Fix last change.

2007-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-mode.el (haskell-delete-indentation): New command.
	(haskell-mode-map): Use it.

	* haskell-doc.el (haskell-doc-in-code-p): New function.
	(haskell-doc-show-type): Use it.
